Redirecting the user to the login page

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@supabase/ssr": "latest",
-		"@supabase/supabase-js": "latest",
+		"@supabase/auth-helpers-nextjs": "^0.10.0",
+		"@supabase/ssr": "^0.4.0",
+		"@supabase/supabase-js": "^2.45.1",
 		"autoprefixer": "10.4.17",
 		"geist": "^1.2.1",
 		"next": "latest",
