--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.0",
 		"@supabase/ssr": "latest",
 		"@supabase/supabase-js": "latest",
 		"autoprefixer": "10.4.17",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"geist": "^1.2.1",
+		"lucide-react": "^0.427.0",
 		"next": "latest",
 		"postcss": "8.4.33",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"tailwindcss": "3.4.1",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "5.3.3"
 	},
 	"devDependencies": {
@@ -26,6 +31,7 @@
 		"gulp-purgecss": "^6.0.0",
 		"gulp-sass": "^5.1.0",
 		"prettier": "^3.3.3",
-		"sass": "^1.77.8"
+		"sass": "^1.77.8",
+		"tailwind-merge": "^2.5.2"
 	}
 }
