--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@supabase/auth-helpers-nextjs": "^0.10.0",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "latest",
 		"@supabase/supabase-js": "latest",
 		"autoprefixer": "10.4.17",
@@ -16,6 +17,7 @@
 		"geist": "^1.2.1",
 		"lucide-react": "^0.427.0",
 		"next": "latest",
+		"next-themes": "^0.3.0",
 		"postcss": "8.4.33",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
