--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "latest",
