--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "latest",
