--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.0",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "latest",
 		"@supabase/supabase-js": "latest",
