--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
+		"@react-three/fiber": "^8.17.6",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "latest",
 		"@supabase/supabase-js": "latest",
 		"autoprefixer": "10.4.17",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"framer-motion": "^11.5.4",
 		"geist": "^1.2.1",
 		"lucide-react": "^0.427.0",
 		"next": "latest",
@@ -29,8 +31,10 @@
 		"postcss": "8.4.33",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"shadergradient": "^1.2.14",
 		"tailwindcss": "3.4.1",
 		"tailwindcss-animate": "^1.0.7",
+		"three": "^0.168.0",
 		"typescript": "5.3.3"
 	},
 	"devDependencies": {
