--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
 		"@radix-ui/react-label": "^2.1.0",
@@ -23,15 +24,18 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"geist": "^1.2.1",
+		"input-otp": "^1.2.4",
 		"lucide-react": "^0.427.0",
 		"next": "latest",
 		"next-themes": "^0.3.0",
 		"postcss": "8.4.33",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.53.0",
 		"tailwindcss": "3.4.1",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "5.3.3"
+		"typescript": "5.3.3",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "20.11.5",
