--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"test": "jest",
+		"test:watch": "jest --watchAll"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
@@ -34,19 +36,28 @@
 		"react-hook-form": "^7.53.0",
 		"tailwindcss": "3.4.1",
 		"tailwindcss-animate": "^1.0.7",
+		"ts-node": "^10.9.2",
 		"typescript": "5.3.3",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^16.0.1",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/node": "20.11.5",
 		"@types/react": "18.2.48",
 		"@types/react-dom": "18.2.18",
 		"encoding": "^0.1.13",
+		"eslint-plugin-jest-dom": "^5.4.0",
+		"eslint-plugin-testing-library": "^6.3.0",
 		"gulp": "^5.0.0",
 		"gulp-purgecss": "^6.0.0",
 		"gulp-sass": "^5.1.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"prettier": "^3.3.3",
 		"sass": "^1.77.8",
-		"tailwind-merge": "^2.5.2"
+		"tailwind-merge": "^2.5.2",
+		"ts-jest": "^29.2.5"
 	}
 }
