--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"gulp-sass": "^5.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jest-fetch-mock": "^3.0.3",
 		"prettier": "^3.3.3",
 		"sass": "^1.77.8",
 		"tailwind-merge": "^2.5.2",
