--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"build": "next build",
 		"start": "next start",
 		"test": "jest",
-		"test:watch": "jest --watchAll"
+		"test:watch": "jest --watchAll",
+		"coverage": "jest --coverage --watchAll"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
