--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
 	"tsx": true,
 	"tailwind": {
 		"config": "tailwind.config.ts",
-		"css": "src/styles/scss/global.scss",
+		"css": "src/styles/global.css",
 		"baseColor": "slate",
 		"cssVariables": true,
 		"prefix": ""
