--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"tailwindcss-animate": "^1.0.7",
 		"ts-node": "^10.9.2",
 		"typescript": "5.3.3",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
