--- a/package.json
+++ b/package.json
@@ -23,37 +23,38 @@
 		"@radix-ui/react-toast": "^1.2.1",
 		"@supabase/auth-helpers-nextjs": "^0.10.0",
 		"@supabase/ssr": "^0.5.2",
-		"@supabase/supabase-js": "^2.46.1",
-		"autoprefixer": "10.4.17",
+		"@supabase/supabase-js": "^2.46.2",
+		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"geist": "^1.2.1",
 		"input-otp": "^1.2.4",
-		"lucide-react": "^0.427.0",
-		"next": "^14.2.5",
-		"next-themes": "^0.3.0",
-		"postcss": "8.4.33",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"lucide-react": "^0.462.0",
+		"next": "^15.0.3",
+		"next-themes": "^0.4.3",
+		"postcss": "^8.4.49",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.0",
-		"supabase": "^1.223.10",
-		"tailwindcss": "3.4.1",
+		"supabase": "^1.226.3",
+		"tailwindcss": "^3.4.15",
 		"tailwindcss-animate": "^1.0.7",
 		"ts-node": "^10.9.2",
-		"typescript": "5.3.3",
+		"typescript": "^5.7.2",
 		"zod": "^3.23.8",
 		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
-		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.0.1",
 		"@testing-library/user-event": "^14.5.2",
-		"@types/node": "20.11.5",
-		"@types/react": "18.2.48",
-		"@types/react-dom": "18.2.18",
+		"@types/node": "^22.10.1",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
 		"encoding": "^0.1.13",
-		"eslint-plugin-jest-dom": "^5.4.0",
-		"eslint-plugin-testing-library": "^6.3.0",
+		"eslint-config-next": "^15.0.3",
+		"eslint-plugin-jest-dom": "^5.5.0",
+		"eslint-plugin-testing-library": "^7.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-fetch-mock": "^3.0.3",
