--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@types/react": "^19.0.2",
 		"@types/react-dom": "^19.0.2",
 		"encoding": "^0.1.13",
+		"eslint": "^9.20.0",
 		"eslint-config-next": "^15.0.3",
 		"eslint-plugin-jest-dom": "^5.5.0",
 		"eslint-plugin-testing-library": "^7.0.0",
