--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"clsx": "^2.1.1",
 		"geist": "^1.2.1",
 		"input-otp": "^1.2.4",
+		"ldrs": "^1.0.2",
 		"lucide-react": "^0.469.0",
 		"next": "^15.1.3",
 		"next-themes": "^0.4.3",
